src/test/ui/issues/issue-20616-5.stderr
error: expected one of `>`, const, lifetime, or type, found `,`
  --> $DIR/issue-20616-5.rs:22:34
   |
LL | type Type_5<'a> = Type_1_<'a, (),,>;
   |                                  ^ expected one of `>`, const, lifetime, or type

error: aborting due to previous error

